Added tundra nad light analysis

--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "import scipy as sp\n",
     "import scipy.stats\n",
     "from matplotlib import pyplot as plt\n",
+    "import matplotlib.gridspec as gridspec\n",
     "from datetime import datetime\n",
     "\n",
     "dirPath = os.path.join('D:\\M.Sc. Gesopatial Tecnologies\\Courses\\SIW011 - Python in GIS\\Final Project\\White-Goose-Light-Pollution\\Data')\n",
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,8 @@
     "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('date','isBreed','NTL_int'))\n",
     "\n",
     "breedStats = {}\n",
-    "f, axarr = plt.subplots(2, 1, figsize=(3,5))\n",
+    "f, axarr = plt.subplots(1, 2, figsize=(3,5))\n",
+    "\n",
     "for year in range(2007,2009):\n",
     "    breedingLight = inVectorArray[(inVectorArray['date'] > datetime(year,1,1)) & \\\n",
     "                                  (inVectorArray['date'] < datetime(year,12,31)) & \\\n",
@@ -301,18 +303,11 @@
     "    axarr[year-2007].hist(breedingLight)\n",
     "    axarr[year-2007].set_title(str(year))\n",
     "\n",
+    "    \n",
+    "\n",
     "print(breedStats[2007])\n",
     "print(breedStats[2008])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###boxplot"
    ]
   },
   {
@@ -394,13 +389,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2007: {'area': 21.767360936972278, 'dist': 128399.85305297648}, 2008: {'area': 21.33763871818779, 'dist': 63858.33692071379}}"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##near analysis\n",
     "arcpy.env.workspace = os.path.join(dirPath, 'Vector')\n",
     "classLayers = arcpy.ListFeatureClasses('*class*')\n",
+    "difDict = {}\n",
     "\n",
     "for year in range(2007,2009):\n",
     "    layer = getClassYear(classLayers, year)\n",
@@ -410,7 +417,13 @@
     "    outLayer = arcpy.CopyFeatures_management(selection, outPath)\n",
     "    outTable = os.path.join(dirPath, 'Tables', 'table_Dist_' + str(year) + '.dbf')\n",
     "    arcpy.analysis.Near(outLayer, layer, method='Geodesic')\n",
-    "    arcpy.Statistics_analysis(outLayer, outTable, [[\"NEAR_DIST\",\"MIN\"]], [\"NEAR_FID\",\"isBreed\"])"
+    "    arcpy.Statistics_analysis(outLayer, outTable, [[\"NEAR_DIST\",\"MIN\"]], [\"NEAR_FID\",\"isBreed\"])\n",
+    "    \n",
+    "    area = sum([r[0] for r in arcpy.da.SearchCursor(layer, (\"SHAPE@AREA\")) if not r[0] is None])\n",
+    "    dist = np.mean([r[0] for r in arcpy.da.SearchCursor(outLayer, (\"NEAR_DIST\")) if not r[0] is None])\n",
+    "    difDict[year] = {'area': area, 'dist': dist}\n",
+    "\n",
+    "difDict"
    ]
   },
   {
@@ -436,11 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(1,2)\n",
+    "\n",
     "\n",
     "breeding = [0,1]\n",
     "for breed in breeding:\n",
@@ -484,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -527,16 +541,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tundra and Light"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersection(lst1, lst2): \n",
+    "    intersecList = [value for value in lst1 if value in lst2] \n",
+    "    return intersecList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2007:  131\n",
+      "2008:  130\n"
+     ]
+    }
+   ],
+   "source": [
+    "arcpy.env.workspace = os.path.join(dirPath, 'Vector')\n",
+    "classLayers = arcpy.ListFeatureClasses('*class*')\n",
+    "\n",
+    "arcpy.MakeFeatureLayer_management(biomeVector, 'biome')\n",
+    "arcpy.SelectLayerByAttribute_management('biome', 'NEW_SELECTION', \" ECO_NAME LIKE '%undra%' \")\n",
+    "\n",
+    "lightCodes = {}\n",
+    "for layer in classLayers:\n",
+    "    selection = arcpy.SelectLayerByLocation_management(layer, 'INTERSECT', 'biome')\n",
+    "    selecTable = arcpy.da.FeatureClassToNumPyArray(selection, ('Id'))\n",
+    "    lightCodes[layer[6:-4]] = selecTable['Id'].tolist()\n",
+    "\n",
+    "print('2007: ', len(lightCodes['2007']))\n",
+    "print('2008: ', len(lightCodes['2008']))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2007:  8\n",
+      "2008:  9\n"
+     ]
+    }
+   ],
+   "source": [
+    "arcpy.env.workspace = os.path.join(dirPath, 'Tables')\n",
+    "distTables = arcpy.ListTables('*Dist*')\n",
+    "\n",
+    "nearCodes = {}\n",
+    "for table in distTables:\n",
+    "    tableBreed = arcpy.da.FeatureClassToNumPyArray(table, ('NEAR_FID','isBreed'))\n",
+    "    nearTable = tableBreed[tableBreed['isBreed'] == 1]\n",
+    "    nearCodes[table[11:-4]] = nearTable['NEAR_FID'].tolist()\n",
+    "    \n",
+    "print('2007: ', len(nearCodes['2007']))\n",
+    "print('2008: ', len(nearCodes['2008']))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2007 2\n",
+      "2008 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year in range(2007,2009):\n",
+    "    intersect = intersection(lightCodes[str(year)], nearCodes[str(year)])\n",
+    "    print(year, len(intersect))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###box plot, merge all the groups\n",
-    "## connect tundra and pollutant\n",
-    "### related to tundrs how far to light\n",
-    "### compared to other places tundra (optional)\n",
-    "### they avoid light or they like tundra?"
+    "### compared to other places tundra (optional)"
    ]
   }
  ],
