--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -10,7 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T11:03:04.243319Z",
+     "start_time": "2020-07-23T11:02:59.119901Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -233,6 +238,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hotspots and Density of breeding points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create workspace \n",
+    "arcpy.env.workspace = \"C:/Users/User/Desktop/MAIN_MUNSTER/Python/DATA FOR PROJECT/movebank/movebank/Real_work\"\n",
+    "print(arcpy.env.workspace)\n",
+    "\n",
+    "#set local variables \n",
+    "in_features = \"Point_findHotspots\"\n",
+    "out_featuresclass = \"Got_Hotspot.shp\"\n",
+    "out_location = os.getcwd()\n",
+    "# export findhotspot to shapefile \n",
+    "arcpy.FeatureClassToFeatureClass_conversion(in_features, out_location, out_featuresclass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#create workspace \n",
+    "wd = os.getcwd()\n",
+    "arcpy.env.workspace = \"C:/Users/User/Documents/ArcGIS/Projects\"\n",
+    "\n",
+    "#set local variables \n",
+    "input_table = \"Got_Hotspot.shp\" \n",
+    "field_name = \"hotspot1\"\n",
+    "expression = \"getlabel(!Gi_Bin!)\"\n",
+    "\n",
+    "codeblock = \"\"\"\n",
+    "def getlabel(x): \n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "    if x == 2 or x == 3:\n",
+    "        return 1\"\"\"\n",
+    "            \n",
+    "# Execute AddField\n",
+    "arcpy.AddField_management(input_table, field_name, \"TEXT\")\n",
+    "\n",
+    "# Execute calculate field \n",
+    "arcpy.CalculateField_management(input_table, field_name, expression, \"PYTHON3\", codeblock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select attributes by layer where hotspots equals 2 or 3\n",
+    "input_table = \"Got_Hotspot.shp\"\n",
+    "out_featureclass = \"Output_feature.shp\"\n",
+    "\n",
+    "select_layer = arcpy.SelectLayerByAttribute_management(input_table, \"SUBSET_SELECTION\", '\"Gi_Bin\" > 1')\n",
+    "\n",
+    "arcpy.CopyFeatures_management(select_layer, out_featureclass)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hotspots in breeding poins and light pollution areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set local variables \n",
+    "input_table = \"Output_feature.shp\"\n",
+    "near_features = \"class_2008\"\n",
+    "\n",
+    "# find features within seach radius\n",
+    "search_radius = \"20000 Meters\"\n",
+    "#location nearest features \n",
+    "location = \"LOCATION\"\n",
+    "\n",
+    "angle = \"NO_ANGLE\"\n",
+    "# execute the function \n",
+    "arcpy.Near_analysis(in_features, near_features, search_radius, location, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set local variables \n",
+    "input_table = \"Output_feature.shp\"\n",
+    "near_features = \"class_2008\"\n",
+    "\n",
+    "# find features within seach radius\n",
+    "search_radius = \"20000 Meters\"\n",
+    "#location nearest features \n",
+    "location = \"LOCATION\"\n",
+    "\n",
+    "angle = \"NO_ANGLE\"\n",
+    "# execute the function \n",
+    "arcpy.Near_analysis(in_features, near_features, search_radius, location, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distance and other proximity information to the tundra for 2007\n",
+    "# set local variables \n",
+    "input_table = \"Output_feature.shp\"\n",
+    "near_features = \"class_2007\"\n",
+    "out_table = \"pollutants_tundra2\"\n",
+    "\n",
+    "\n",
+    "#set other parameters \n",
+    "search_radius = \"20000 Meters\"\n",
+    "location = \"LOCATION\"\n",
+    "angle = \"NO_ANGLE\"\n",
+    "closest = \"ALL\"\n",
+    "\n",
+    "#find the closeness between the features within the radius \n",
+    "arcpy.GenerateNearTable_analysis(input_table, near_features, out_table, search_radius, location, angle, closest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distance and other proximity information to the pollutants for 2008\n",
+    "# set local variables \n",
+    "input_table = \"Output_feature.shp\"\n",
+    "near_features = \"class_2008\"\n",
+    "out_table = \"pollutants_tundra1\"\n",
+    "\n",
+    "\n",
+    "#set other parameters \n",
+    "search_radius = \"20000 Meters\"\n",
+    "location = \"LOCATION\"\n",
+    "angle = \"NO_ANGLE\"\n",
+    "closest = \"ALL\"\n",
+    "\n",
+    "#find the closeness between the features within the radius \n",
+    "arcpy.GenerateNearTable_analysis(input_table, near_features, out_table, search_radius, location, angle, closest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculate Light Values"
    ]
   },
@@ -273,8 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T15:47:50.976159Z",
+     "start_time": "2020-07-23T11:04:10.478575Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -300,7 +473,7 @@
     "             'var': np.var(breedingLight), 'std:': np.std(breedingLight)}\n",
     "    breedStats[year] = stats\n",
     "    \n",
-    "    axarr[year-2007].hist(breedingLight)\n",
+    "    axarr[year-2007].hist(breedingLight, color = 'gray')\n",
     "    axarr[year-2007].set_title(str(year))\n",
     "\n",
     "    \n",
@@ -308,6 +481,48 @@
     "print(breedStats[2007])\n",
     "print(breedStats[2008])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inVectorArray = arcpy.da.FeatureClassToNumPyArray(inVector, ('date','isBreed','NTL_int'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breedingLight = inVectorArray[(inVectorArray['date'] > datetime(2007,1,1)) & \\\n",
+    "                                  (inVectorArray['date'] < datetime(2008,12,31)) & \\\n",
+    "                                  (inVectorArray['isBreed'] == 1)]['NTL_int']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean': 3.903669724770642, 'median': 4.0, 'var': 1.0824635973402914, 'std:': 1.0404151081853297}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats = {'mean': np.mean(breedingLight), 'median': np.median(breedingLight), \\\n",
+    "             'var': np.var(breedingLight), 'std:': np.std(breedingLight)}\n",
+    "stats"
    ]
   },
   {
@@ -376,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,16 +604,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2007: {'area': 21.767360936972278, 'dist': 128399.85305297648}, 2008: {'area': 21.33763871818779, 'dist': 63858.33692071379}}"
+       "{2007: {'area': 21.767360936972278, 'count': 2874, 'dist': 128399.85305297648}, 2008: {'area': 21.33763871818779, 'count': 2939, 'dist': 63858.33692071379}}"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,16 +635,22 @@
     "    arcpy.Statistics_analysis(outLayer, outTable, [[\"NEAR_DIST\",\"MIN\"]], [\"NEAR_FID\",\"isBreed\"])\n",
     "    \n",
     "    area = sum([r[0] for r in arcpy.da.SearchCursor(layer, (\"SHAPE@AREA\")) if not r[0] is None])\n",
+    "    count = len([r[0] for r in arcpy.da.SearchCursor(layer, (\"SHAPE@AREA\")) if not r[0] is None])\n",
     "    dist = np.mean([r[0] for r in arcpy.da.SearchCursor(outLayer, (\"NEAR_DIST\")) if not r[0] is None])\n",
-    "    difDict[year] = {'area': area, 'dist': dist}\n",
+    "    difDict[year] = {'area': area, 'count': count,'dist': dist}\n",
     "\n",
     "difDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T15:48:28.297172Z",
+     "start_time": "2020-07-23T15:48:19.822024Z"
+    }
+   },
    "outputs": [],
    "source": [
     "arcpy.env.workspace = os.path.join(dirPath, 'Tables')\n",
@@ -449,8 +670,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T17:47:47.252916Z",
+     "start_time": "2020-07-23T16:25:24.730914Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(1,2)\n",
@@ -461,11 +687,13 @@
     "    tbl = tableLight[tableLight['isBreed'] == breed]\n",
     "    cor , p = scipy.stats.pearsonr(tbl['MIN_NEAR_D'], tbl['MEAN'])\n",
     "    label = r'$\\rho$:' + str(round(cor,2))\n",
-    "    axs[breed].scatter(tbl['MIN_NEAR_D'], tbl['MEAN'], alpha=0.8, c= 'blue', edgecolors='none', s=30, label=label)\n",
+    "    axs[breed].scatter(tbl['MIN_NEAR_D'], tbl['MEAN'], alpha=0.8, c= 'gray', edgecolors='none', s=30, label=label)\n",
     "    m, b = np.polyfit(tbl['MIN_NEAR_D'], tbl['MEAN'], 1)\n",
-    "    axs[breed].plot(tbl['MIN_NEAR_D'], m * tbl['MIN_NEAR_D'] + b)\n",
+    "    axs[breed].plot(tbl['MIN_NEAR_D'], m * tbl['MIN_NEAR_D'] + b , c = 'black')\n",
     "    axs[breed].legend(loc=1)\n",
-    "\n",
+    "    axs[0].set_title('non-breeding')\n",
+    "    axs[1].set_title('Breeding')\n",
+    "    \n",
     "fig.suptitle('Mean Light Value vs Min distance')\n",
     "plt.show()"
    ]
@@ -479,8 +707,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T15:51:47.149236Z",
+     "start_time": "2020-07-23T15:51:47.30066Z"
+    }
+   },
    "outputs": [],
    "source": [
     "arcpy.env.workspace = os.path.join(dirPath, 'Vector')\n",
@@ -498,8 +731,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-23T16:25:24.730424Z",
+     "start_time": "2020-07-23T16:04:16.132450Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -521,22 +759,34 @@
     "                 'max:': np.max(breedingDistance),'median': np.median(breedingDistance), \\\n",
     "                 'std:': np.std(breedingDistance)}\n",
     "    corrCoef, p = scipy.stats.pearsonr(tableBreed['NEAR_DIST'],tableBreed['NTL_int'])\n",
-    "    axs[0].violinplot(breedingDistance, positions = [breed],showmeans=False, showmedians=True)\n",
+    "    violin = axs[0].violinplot(breedingDistance, positions = [breed],showmeans=False, showmedians=True)\n",
     "    axs[0].set_title('Violin plot')\n",
-    "    axs[1].boxplot(breedingDistance, positions = [breed])\n",
+    "    axs[1].boxplot(breedingDistance, positions = [breed], medianprops= dict(color = 'black'))\n",
     "    axs[1].set_title('Box plot')\n",
+    "    \n",
+    "    for pc in violin['bodies']:\n",
+    "        pc.set_facecolor('gray')\n",
+    "        pc.set_edgecolor('black')\n",
+    "        \n",
+    "    for partname in ('cbars','cmins','cmaxes','cmedians'):\n",
+    "        vp = violin[partname]\n",
+    "        vp.set_edgecolor('black')\n",
+    "        \n",
     "    print(statsDist, '\\n', corrCoef)\n",
     "    \n",
     "index = 0\n",
     "for ax in axs:\n",
     "    ax.yaxis.grid(True)\n",
     "    ax.set_xticks([0,1])\n",
-    "    ax.set_xlabel('Season')\n",
     "    if index == 0:\n",
     "        ax.set_ylabel('Distances to light pollutant')  \n",
     "        index = index + 1\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
     "plt.setp(axs, xticks=[0,1],\n",
-    "         xticklabels=['breeding', 'non-breeding'])\n",
+    "         xticklabels=['non-breeding', 'breeding'])\n",
     "plt.show()"
    ]
   },
@@ -549,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -619,31 +869,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2007 2\n",
-      "2008 5\n"
+      "2007 [101, 115]\n",
+      "2008 [43, 89, 150, 193, 242]\n"
      ]
     }
    ],
    "source": [
     "for year in range(2007,2009):\n",
     "    intersect = intersection(lightCodes[str(year)], nearCodes[str(year)])\n",
-    "    print(year, len(intersect))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### compared to other places tundra (optional)"
+    "    print(year, intersect)"
    ]
   }
  ],
