--- a/Code/Lights_Pollution.ipynb
+++ b/Code/Lights_Pollution.ipynb
@@ -238,6 +238,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Breeding points density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set workspace\n",
+    "wd = os.getcwd()\n",
+    "arcpy.env.workspace = \"C:/Users/User/Desktop/MAIN_MUNSTER/White-Goose-Light-Pollution-master/Data/Vector\"\n",
+    "\n",
+    "#check out extension\n",
+    "if arcpy.CheckExtension('Spatial') == 'Available':\n",
+    "    arcpy.CheckOutExtension('Spatial')\n",
+    "else:\n",
+    "    print('Required extension not available')\n",
+    "    \n",
+    "# Define output location and check existence\n",
+    "out_fn = os.path.join(wd, 'point_density')\n",
+    "if arcpy.Exists(out_fn):\n",
+    "    arcpy.Delete_Management(out_fn)\n",
+    "\n",
+    "# run the point density tool\n",
+    "out_ras = arcpy.sa.PointDensity('points.shp', None, 100)\n",
+    "out_ras.save(out_fn)\n",
+    "\n",
+    "#check in extension to give it back\n",
+    "arcpy.CheckInExtension('Spatial')\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Hotspots and Density of breeding points"
    ]
   },
